syntax = "proto3";

option java_package = "com.example.probonoapp";
option java_multiple_files = true;

message Post {
    string title = 1;
    repeated string specialities = 2;
    string description = 3;
    string creator_user_name = 4;
    string post_id = 5;
    string posted_at = 6;
}

message PostList {
    repeated Post posts = 1;
}